# SensoOne

./: .gitignore  CMakeLists.txt  README.md  Results.cpp  Results.h  main.cpp  qml.qrc
qml/: Dashboard.qml  Styles.qml  main.qml
qml/menu/: MainScreen.qml  NavigationBar.qml  ResultsBar.qml  ZoomBar.qml
resources/: main.qml
resources/screens/: ButtonControl.qml  Dashboard.qml  MainScreen.qml  NavigationBar.qml  ResultsBar.qml  ResultsDelegate.qml  ZoomBar.qml
resources/styles/: Styles.qml
